--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/rlContainer"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_gravity="center"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/gray"
     android:orientation="vertical">
+
+
 
     <ImageView
         android:id="@+id/imageView"
@@ -14,11 +16,31 @@
         android:background="@drawable/bg_imageview_border"/>
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/tvUsername"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="top|center_horizontal"
-        android:text="@string/text_cancel"
-        android:textColor="@color/white" />
+        android:textStyle="bold"
+        android:textSize="24sp"
+        android:textColor="@color/purple_200" />
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/tvGoBack"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/text_back"
+        android:textStyle="bold"
+        android:textSize="24sp"
+        android:textColor="@color/purple_200" />
+
+    <TextView
+        android:id="@+id/tvFinish"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:layout_gravity="top|center_horizontal"
+        android:text="Finish"
+        android:textStyle="bold"
+        android:textSize="24sp"
+        android:textColor="@color/purple_200" />
+
+</LinearLayout>
